--- a/views/Signinpage.handlebars
+++ b/views/Signinpage.handlebars
@@ -98,7 +98,7 @@
                                   <input type="password" class="form-control" id="password" placeholder="Password">
                                 </div>
                                 <br>
-                                <button id="submitBtn" type="button" class="btn btn-default" onClick ="parent.location='/'">Submit</button>
+                                <button id="submitBtn" type="button" class="btn btn-default" onClick ="parent.location='/home'">Submit</button>
                                 <button id="NewUserBtn" type="button" class="btn btn-default" onClick ="parent.location='/newuser'">New User?</button>
                                 <button id="ForgotPasswordBtn" type="button" class="btn btn-default" onClick ="parent.location='/forgotpassword'">Forgot Password?</button>
                               </form>
