--- a/views/added.handlebars
+++ b/views/added.handlebars
@@ -36,36 +36,74 @@
 
         <!-- Navigation -->
         <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+
+
+
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" style="color:light-grey"> Menu </a>
-                    <ul class="dropdown-menu">
-                            <li class="active">
-                                <a href="/"><i class="fa fa-fw fa-dashboard"></i> Home</a>
-                            </li>
-                            <li>
-                                <a href="/task"><i class="fa fa-fw fa-bar-chart-o"></i> Add a new task</a>
-                            </li>
-                            <li>
-                                <a href="/exercises"><i class="fa fa-fw fa-table"></i> Exercises</a>
-                            </li>
-                            <li>
-                                <a href="/blank-page"><i class="fa fa-fw fa-edit"></i> Tracking</a>
-                            </li>
-                            <li>
-                                <a href="/about"><i class="fa fa-fw fa-desktop"></i> About</a>
-                            </li>
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="index.html">Be Chilled</a>
+            </div>
 
-                            <li>
-                                <a href="/blank-page"><i class="fa fa-fw fa-file"></i> Help</a>
-                            </li>
-                            <li>
-                                <a href="/blank-page"><i class="fa fa-fw fa-dashboard"></i> Sign Out</a>
-                            </li>                            
+
+
+            <!-- Top Menu Items -->
+            <ul class="nav navbar-right top-nav">
+
+
+
+
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-bell"></i> <b class="caret"></b></a>
+                    <ul class="dropdown-menu alert-dropdown">
+                        <li>
+                            <a href="#">Important <span class="label label-default">Task 1 gsdfgsdfgdsfgsdfgsdfgdfgsdf</span></a>
+                        </li>
+                        <li>
+                            <a href="#">Important <span class="label label-primary">Task 2</span></a>
+                        </li>
+                        <li>
+                            <a href="#">Important <span class="label label-success">Task 3</span></a>
+                        </li>
+                        <li>
+                            <a href="#">Important <span class="label label-info">Task 4</span></a>
+                        </li>
+                        <li>
+                            <a href="#">Important <span class="label label-warning">Task 5</span></a>
+                        </li>
+                        <li>
+                            <a href="#">Important <span class="label label-danger">Task 6</span></a>
+                        </li>
+                        <li class="divider"></li>
+                        <li>
+                            <a href="#">View All</a>
+                        </li>
+                    </ul>
+                </li>
+
+
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> Team Chill Out <b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                        <li>
+                            <a href="#"><i class="fa fa-fw fa-user"></i> Edit Profile</a>
+                        </li>
+                          <li class="divider"></li>
+                        <li>
+                            <a href="#"><i class="fa fa-fw fa-power-off"></i> Log Out</a>
+                        </li>
                     </ul>
                 </li>
             </ul>
+
+
+
+
             <!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav side-nav">
@@ -79,24 +117,21 @@
                                 <a href="/exercises"><i class="fa fa-fw fa-table"></i> Exercises</a>
                             </li>
                             <li>
-                                <a href="/blank-page"><i class="fa fa-fw fa-edit"></i> Tracking</a>
+                                <a href="/analysis"><i class="fa fa-fw fa-edit"></i> Analysis</a>
                             </li>
                             <li>
                                 <a href="/about"><i class="fa fa-fw fa-desktop"></i> About</a>
                             </li>
 
                             <li>
-                                <a href="/blank-page"><i class="fa fa-fw fa-file"></i> Help</a>
+                                <a href="/help"><i class="fa fa-fw fa-file"></i> Help</a>
                             </li>
                             <li>
-                                <a href="/blank-page"><i class="fa fa-fw fa-dashboard"></i> Sign Out</a>
-                            </li>           
-
+                                <a href="/signinpage"><i class="fa fa-fw fa-dashboard"></i> Sign Out</a>
+                            </li>                
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
-            </div>
-            <!-- collapse navbar-collapse navbar-ex1-collapse-->
         </nav>
 
         <div id="page-wrapper">
@@ -107,9 +142,13 @@
                     <h1 class="page-header">
                             <!-- heading goes here-->    
                     </h1>
-                    <h2 style="display:inline"> New task has been added. Click</h2>
-                    <h2 style="display:inline"><a href="/"> here</a></h2>
-                    <h2 style="display:inline"> to go back to home screen.</h2>
+
+                    <div class="alert alert-success">
+                        <h2 style="display:inline"> New task has been added. Click</h2>
+                        <h2 style="display:inline"><a href="/"> here</a></h2>
+                        <h2 style="display:inline"> to go back to home screen.</h2>
+                    </div>
+
                 
 
                 </div>
@@ -129,6 +168,11 @@
 
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
+
+
+<footer>
+
+</footer>
 
 </body>
 
