--- a/views/help.handlebars
+++ b/views/help.handlebars
@@ -36,40 +36,78 @@
 
         <!-- Navigation -->
         <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+
+
+
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" style="color:light-grey"> Menu </a>
-                    <ul class="dropdown-menu">
-                            <li>
-                                <a href="/"><i class="fa fa-fw fa-dashboard"></i> Home</a>
-                            </li>
-                            <li>
-                                <a href="/task"><i class="fa fa-fw fa-bar-chart-o"></i> Add a new task</a>
-                            </li>
-                            <li>
-                                <a href="/exercises"><i class="fa fa-fw fa-table"></i> Exercises</a>
-                            </li>
-                            <li>
-                                <a href="/analysis"><i class="fa fa-fw fa-edit"></i> Analysis</a>
-                            </li>
-                            <li>
-                                <a href="/about"><i class="fa fa-fw fa-desktop"></i> About</a>
-                            </li>
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="index.html">Be Chilled</a>
+            </div>
 
-                            <li class="active">
-                                <a href="/help"><i class="fa fa-fw fa-file"></i> Help</a>
-                            </li>
-                            <li>
-                                <a href="/signinpage"><i class="fa fa-fw fa-dashboard"></i> Sign Out</a>
-                            </li>                         
+
+
+            <!-- Top Menu Items -->
+            <ul class="nav navbar-right top-nav">
+
+
+
+
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-bell"></i> <b class="caret"></b></a>
+                    <ul class="dropdown-menu alert-dropdown">
+                        <li>
+                            <a href="#">Important <span class="label label-default">Task 1 gsdfgsdfgdsfgsdfgsdfgdfgsdf</span></a>
+                        </li>
+                        <li>
+                            <a href="#">Important <span class="label label-primary">Task 2</span></a>
+                        </li>
+                        <li>
+                            <a href="#">Important <span class="label label-success">Task 3</span></a>
+                        </li>
+                        <li>
+                            <a href="#">Important <span class="label label-info">Task 4</span></a>
+                        </li>
+                        <li>
+                            <a href="#">Important <span class="label label-warning">Task 5</span></a>
+                        </li>
+                        <li>
+                            <a href="#">Important <span class="label label-danger">Task 6</span></a>
+                        </li>
+                        <li class="divider"></li>
+                        <li>
+                            <a href="#">View All</a>
+                        </li>
+                    </ul>
+                </li>
+
+
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> Team Chill Out <b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                        <li>
+                            <a href="#"><i class="fa fa-fw fa-user"></i> Edit Profile</a>
+                        </li>
+                          <li class="divider"></li>
+                        <li>
+                            <a href="#"><i class="fa fa-fw fa-power-off"></i> Log Out</a>
+                        </li>
                     </ul>
                 </li>
             </ul>
+
+
+
+
             <!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav side-nav">
-                           <li>
+                            <li>
                                 <a href="/"><i class="fa fa-fw fa-dashboard"></i> Home</a>
                             </li>
                             <li>
@@ -90,14 +128,10 @@
                             </li>
                             <li>
                                 <a href="/signinpage"><i class="fa fa-fw fa-dashboard"></i> Sign Out</a>
-                            </li>                         
-
-
+                            </li>                
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
-            </div>
-            <!-- collapse navbar-collapse navbar-ex1-collapse-->
         </nav>
 
         <div id="page-wrapper">
