--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -9,15 +9,16 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Team Chill Out | Intro HCI</title>
+    <title>Team Chill Out</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/bootstrap-theme.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
     <link href="css/sb-admin.css" rel="stylesheet">
-    <link href="css/introHCI.css" rel="stylesheet">
+
+    <!-- Morris Charts CSS -->
+    <link href="css/plugins/morris.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -37,36 +38,74 @@
 
         <!-- Navigation -->
         <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+
+
+
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" style="color:light-grey"> Menu </a>
-                    <ul class="dropdown-menu">
-                            <li class="active">
-                                <a href="/"><i class="fa fa-fw fa-dashboard"></i> Home</a>
-                            </li>
-                            <li>
-                                <a href="/task"><i class="fa fa-fw fa-bar-chart-o"></i> Add a new task</a>
-                            </li>
-                            <li>
-                                <a href="/exercises"><i class="fa fa-fw fa-table"></i> Exercises</a>
-                            </li>
-                            <li>
-                                <a href="/analysis"><i class="fa fa-fw fa-edit"></i> Analysis</a>
-                            </li>
-                            <li>
-                                <a href="/about"><i class="fa fa-fw fa-desktop"></i> About</a>
-                            </li>
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand"  href="/">Be Chilled</a>
+            </div>
 
-                            <li>
-                                <a href="/help"><i class="fa fa-fw fa-file"></i> Help</a>
-                            </li>
-                            <li>
-                                <a href="/signinpage"><i class="fa fa-fw fa-dashboard"></i> Sign Out</a>
-                            </li>                            
+
+
+            <!-- Top Menu Items -->
+            <ul class="nav navbar-right top-nav">
+
+
+
+
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-bell"></i> <b class="caret"></b></a>
+                    <ul class="dropdown-menu alert-dropdown">
+                        <li>
+                            <a href="#">Important <span class="label label-default">Task 1</span></a>
+                        </li>
+                        <li>
+                            <a href="#">Important <span class="label label-primary">Task 2</span></a>
+                        </li>
+                        <li>
+                            <a href="#">Important <span class="label label-success">Task 3</span></a>
+                        </li>
+                        <li>
+                            <a href="#">Important <span class="label label-info">Task 4</span></a>
+                        </li>
+                        <li>
+                            <a href="#">Important <span class="label label-warning">Task 5</span></a>
+                        </li>
+                        <li>
+                            <a href="#">Important <span class="label label-danger">Task 6</span></a>
+                        </li>
+                        <li class="divider"></li>
+                        <li>
+                            <a href="#">View All</a>
+                        </li>
+                    </ul>
+                </li>
+
+
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> Team Chill Out <b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                        <li>
+                            <a href="#"><i class="fa fa-fw fa-user"></i> Edit Profile</a>
+                        </li>
+                          <li class="divider"></li>
+                        <li>
+                            <a href="#"><i class="fa fa-fw fa-power-off"></i> Log Out</a>
+                        </li>
                     </ul>
                 </li>
             </ul>
+
+
+
+
             <!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav side-nav">
@@ -91,17 +130,13 @@
                             </li>
                             <li>
                                 <a href="/signinpage"><i class="fa fa-fw fa-dashboard"></i> Sign Out</a>
-                            </li>     
-
-
-
-
+                            </li>                
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
-            </div>
-            <!-- collapse navbar-collapse navbar-ex1-collapse-->
         </nav>
+
+
 
         <div id="page-wrapper">
 
@@ -111,31 +146,47 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <h1 class="page-header">
-                            Your Tasks
-                            <small>Display by Date</small>
+                            Dashboard <small>View By Date</small>
                             <input class="btn btn-default" type="button"  onClick="parent.location='/task' "value="New Task" style="float: right;">
                         </h1>
-                        {{#each tasks}}
-                        <div class="task">
-                            <h2 class="task_heading" > Name: </h2>
-                            <h3 class="task_name" > {{name}}</h3>
-                            <br>
-                            <h2 class="task_heading" > Date: </h2>
-                            <h3 class="task_date" >{{date}}</h3>
-                            <br>
-                            <h2 class="task_heading" style="display:inline"> Priority: </h2>
-                            <h3 class="task_priority" style="display:inline">{{priority}}</3>
-                            <br>
-                            <h2 class="task_heading" style="display:inline"> Description: </h2> 
-                            <h3 class="task_description"style="display:inline">{{description}}</h3>
-                            <br><br><br>
 
-
-                        </div>
-                        {{/each}}
                     </div>
                 </div>
+
+                {{#each tasks}}
+                <div class="row">
+                    
+                        <!--div class="panel panel-green"-->
+                        <!--div class="panel panel-yellow"-->
+                        <!--div class="panel panel-red"-->
+                        <div class="{{panel}}">
+                            <div class="panel-heading">
+                                <div class="row">
+                                    <div class="col-xs-3">
+                                        <i class="fa fa-tasks fa-3x"></i>
+                                    </div>
+                                    <div class="col-xs-9">
+                                        <h4> 
+                                            {{name}}
+                                        </h4>
+                                        <div>{{date}}</div>
+                                    </div>
+                                </div>
+                            </div>
+                            <a href="#">
+                                <div class="panel-footer">
+                                    <span class="pull-left"><b>Priority</b>:    {{priority}}</span>
+                                    <span class="pull-left"><b>Description</b>: {{description}}</span>
+                                    <div class="clearfix"></div>
+                                </div>
+                            </a>
+                        </div>
+                
+
+                </div>
+                {{/each}}
                 <!-- /.row -->
+
 
             </div>
             <!-- /.container-fluid -->
@@ -151,6 +202,9 @@
 
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
+
+    <!-- Morris Charts JavaScript -->
+
 
 </body>
 
