--- a/views/analysis.handlebars
+++ b/views/analysis.handlebars
@@ -50,7 +50,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Be Chilled</a>
+                <a class="navbar-brand" href="/">Be Chilled</a>
             </div>
 
 
@@ -61,44 +61,16 @@
 
 
 
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-bell"></i> <b class="caret"></b></a>
-                    <ul class="dropdown-menu alert-dropdown">
-                        <li>
-                            <a href="#">Important <span class="label label-default">Task 1 gsdfgsdfgdsfgsdfgsdfgdfgsdf</span></a>
-                        </li>
-                        <li>
-                            <a href="#">Important <span class="label label-primary">Task 2</span></a>
-                        </li>
-                        <li>
-                            <a href="#">Important <span class="label label-success">Task 3</span></a>
-                        </li>
-                        <li>
-                            <a href="#">Important <span class="label label-info">Task 4</span></a>
-                        </li>
-                        <li>
-                            <a href="#">Important <span class="label label-warning">Task 5</span></a>
-                        </li>
-                        <li>
-                            <a href="#">Important <span class="label label-danger">Task 6</span></a>
-                        </li>
-                        <li class="divider"></li>
-                        <li>
-                            <a href="#">View All</a>
-                        </li>
-                    </ul>
-                </li>
 
-
-                <li class="dropdown">
+                <li class="dropdown" style="float: right">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> Team Chill Out <b class="caret"></b></a>
                     <ul class="dropdown-menu">
-                        <li>
+                  <!--      <li>
                             <a href="#"><i class="fa fa-fw fa-user"></i> Edit Profile</a>
                         </li>
-                          <li class="divider"></li>
+                          <li class="divider"></li> -->
                         <li>
-                            <a href="#"><i class="fa fa-fw fa-power-off"></i> Log Out</a>
+                            <a href="/signinpage"><i class="fa fa-fw fa-power-off"></i> Log Out</a>
                         </li>
                     </ul>
                 </li>
@@ -129,9 +101,7 @@
                             <li>
                                 <a href="/help"><i class="fa fa-fw fa-file"></i> Help</a>
                             </li>
-                            <li>
-                                <a href="/signinpage"><i class="fa fa-fw fa-dashboard"></i> Sign Out</a>
-                            </li>                
+              
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -147,7 +117,31 @@
                         Analysis    
                     </h1>
 
+                    {{#each analysis}}
 
+                    <div class="alert {{stressedAlert}}">
+                        <strong>{{stressMsg}}</strong> {{stressMsg2}}
+                    </div>
+
+                    <br>
+
+
+                    <div class="alert {{productiveAlert}}">
+                        <strong>{{productiveMsg}}</strong> {{productiveMsg2}}
+                    </div>
+
+                    <br>
+
+
+                    <div class="alert {{feelingAlert}}">
+                        <strong>{{feelingMsg}}</strong> {{feelingMsg2}}
+                    </div>
+
+                    <br>
+
+                    {{/each}}
+
+                    <br>
                 <!-- Flot Charts -->
 
                 <!-- /.row -->
@@ -164,26 +158,14 @@
                 <!-- Morris Charts -->
 
                 <!-- /.row -->
-
-              <div class="row">
-                    <div class="col-lg-12">
-                        <div class="panel panel-green">
-                            <div class="panel-heading">
-                                <h3 class="panel-title"><i class="fa fa-bar-chart-o"></i> Area Line Graph Example with Tooltips</h3>
-                            </div>
-                            <div class="panel-body">
-                                <div id="morris-area-chart"></div>
-                            </div>
-                        </div>
-                    </div>
-                </div>  
+  
                 <!-- /.row -->
 
                 <div class="row">
                     <div class="col-lg-4">
                         <div class="panel panel-yellow">
                             <div class="panel-heading">
-                                <h3 class="panel-title"><i class="fa fa-long-arrow-right"></i> Donut Chart Example</h3>
+                                <h3 class="panel-title"><i class="fa fa-long-arrow-right"></i> Summary Your feeling</h3>
                             </div>
                             <div class="panel-body">
                                 <div id="morris-donut-chart"></div>
