--- a/views/analyzed.handlebars
+++ b/views/analyzed.handlebars
@@ -58,7 +58,6 @@
 
 
 
-
                 <li class="dropdown" style="float: right">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> Team Chill Out <b class="caret"></b></a>
                     <ul class="dropdown-menu">
@@ -114,9 +113,9 @@
                     </h1>
 
                     <div class="alert alert-success">
-                        <h2 style="display:inline"> New task has been added. Click</h2>
-                        <h2 style="display:inline"><a href="/"> here</a></h2>
-                        <h2 style="display:inline"> to go back to home screen.</h2>
+                        <h2 style="display:inline"> Your response has been recorded. Click</h2>
+                        <h2 style="display:inline"><a href="/analysis"> here</a></h2>
+                        <h2 style="display:inline"> to see the graph of your mood.</h2>
                     </div>
 
                 
