--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -49,7 +49,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand"  href="/">Be Chilled</a>
+                <a class="navbar-brand"  href="/" >Be Chilled</a>
             </div>
 
 
@@ -59,45 +59,16 @@
 
 
 
-
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-bell"></i> <b class="caret"></b></a>
-                    <ul class="dropdown-menu alert-dropdown">
-                        <li>
-                            <a href="#">Important <span class="label label-default">Task 1</span></a>
-                        </li>
-                        <li>
-                            <a href="#">Important <span class="label label-primary">Task 2</span></a>
-                        </li>
-                        <li>
-                            <a href="#">Important <span class="label label-success">Task 3</span></a>
-                        </li>
-                        <li>
-                            <a href="#">Important <span class="label label-info">Task 4</span></a>
-                        </li>
-                        <li>
-                            <a href="#">Important <span class="label label-warning">Task 5</span></a>
-                        </li>
-                        <li>
-                            <a href="#">Important <span class="label label-danger">Task 6</span></a>
-                        </li>
-                        <li class="divider"></li>
-                        <li>
-                            <a href="#">View All</a>
-                        </li>
-                    </ul>
-                </li>
-
-
-                <li class="dropdown">
+                <li class="dropdown" style="float:right">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> Team Chill Out <b class="caret"></b></a>
                     <ul class="dropdown-menu">
                         <li>
+                  <!--      <li>
                             <a href="#"><i class="fa fa-fw fa-user"></i> Edit Profile</a>
                         </li>
-                          <li class="divider"></li>
+                          <li class="divider"></li> -->
                         <li>
-                            <a href="#"><i class="fa fa-fw fa-power-off"></i> Log Out</a>
+                            <a href="/signinpage"><i class="fa fa-fw fa-power-off"></i> Log Out</a>
                         </li>
                     </ul>
                 </li>
@@ -128,9 +99,7 @@
                             <li>
                                 <a href="/help"><i class="fa fa-fw fa-file"></i> Help</a>
                             </li>
-                            <li>
-                                <a href="/signinpage"><i class="fa fa-fw fa-dashboard"></i> Sign Out</a>
-                            </li>                
+              
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
