--- a/views/task.handlebars
+++ b/views/task.handlebars
@@ -87,11 +87,11 @@
                                 <a href="/task"><i class="fa fa-fw fa-bar-chart-o"></i> Add a new task</a>
                             </li>
                             <li>
-                                <a href="/exercises"><i class="fa fa-fw fa-table"></i> Exercises</a>
+                                <a href="/exercises"><i class="fa fa-fw fa-table"></i> How Is Your Mood?</a>
                             </li>
-                            <li>
+                    <!--        <li>
                                 <a href="/analysis"><i class="fa fa-fw fa-edit"></i> Analysis</a>
-                            </li>
+                            </li>       -->
                             <li>
                                 <a href="/about"><i class="fa fa-fw fa-desktop"></i> About</a>
                             </li>
@@ -148,6 +148,8 @@
                                 </button>
                                 <button type="reset" class="btn btn-default">Reset</button>
                               </form>
+                              <br><br><br><br><br>
+
 
                 </div>
                 <!-- /.row -->
