--- a/views/analyzed.handlebars
+++ b/views/analyzed.handlebars
@@ -85,7 +85,7 @@
                                 <a href="/task"><i class="fa fa-fw fa-bar-chart-o"></i> Add a new task</a>
                             </li>
                             <li>
-                                <a href="/exercises"><i class="fa fa-fw fa-table"></i> How Is Your Mood?</a>
+                                <a href="/exercises"><i class="fa fa-fw fa-table"></i> Reflection</a>
                             </li>
                     <!--        <li>
                                 <a href="/analysis"><i class="fa fa-fw fa-edit"></i> Analysis</a>
@@ -122,7 +122,7 @@
 
                 </div>
                 <!-- /.row -->
-
+                <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
             </div>
             <!-- /.container-fluid -->
 
