--- a/views/exercises.handlebars
+++ b/views/exercises.handlebars
@@ -85,7 +85,7 @@
                                 <a href="/task"><i class="fa fa-fw fa-bar-chart-o"></i> Add a new task</a>
                             </li>
                             <li class="active">
-                                <a href="/exercises"><i class="fa fa-fw fa-table"></i> How Is Your Mood?</a>
+                                <a href="/exercises"><i class="fa fa-fw fa-table"></i> Reflection</a>
                             </li>
                     <!--        <li>
                                 <a href="/analysis"><i class="fa fa-fw fa-edit"></i> Analysis</a>
@@ -112,7 +112,7 @@
                 <!-- Page Heading -->
                     <h1 class="page-header">
                             <!-- heading goes here-->
-                        Exercises   
+                        Reflection
                     </h1>
 
                     <div class="alert alert-info">
