--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -86,8 +86,11 @@
                             <li>
                                 <a href="/task"><i class="fa fa-fw fa-bar-chart-o"></i> Add a new task</a>
                             </li>
+             <!--               <li>
+                                <a href="/history"><i class="fa fa-fw fa-dashboard"></i> Your Task History</a>
+                            </li>   -->
                             <li>
-                                <a href="/exercises"><i class="fa fa-fw fa-table"></i> How Is Your Mood?</a>
+                                <a href="/exercises"><i class="fa fa-fw fa-table"></i> Reflection</a>
                             </li>
                  <!--           <li>
                                 <a href="/analysis"><i class="fa fa-fw fa-edit"></i> Analysis</a>
@@ -129,9 +132,11 @@
                         <!--div class="panel panel-green"-->
                         <!--div class="panel panel-yellow"-->
                         <!--div class="panel panel-red"-->
-                        <a href="#">
+                       <!-- <a href="#">  -->
                         <div class="{{panel}}">
+                            <a href="#">
                             <div class="panel-heading">
+
                                 <div class="row">
                                     <div class="col-xs-3">
                                         <i class="fa fa-tasks fa-3x"></i>
@@ -145,13 +150,14 @@
                                     </div>
                                 </div>
                             </div>
+                            </a>
                             <div class="details"> </div>
                             <!--    <div class="panel-footer">
                                     <span class="pull-left"><b>Description</b>: {{description}}</span>
                                     <div class="clearfix"></div>
                                 </div>   -->
                         </div>
-                    </a>
+                  <!--  </a>   -->
                 
 
                 </div>
