--- a/views/task.handlebars
+++ b/views/task.handlebars
@@ -87,7 +87,7 @@
                                 <a href="/task"><i class="fa fa-fw fa-bar-chart-o"></i> Add a new task</a>
                             </li>
                             <li>
-                                <a href="/exercises"><i class="fa fa-fw fa-table"></i> How Is Your Mood?</a>
+                                <a href="/exercises"><i class="fa fa-fw fa-table"></i> Reflection </a>
                             </li>
                     <!--        <li>
                                 <a href="/analysis"><i class="fa fa-fw fa-edit"></i> Analysis</a>
