--- a/views/exercises.handlebars
+++ b/views/exercises.handlebars
@@ -194,7 +194,7 @@
 
 
 
-                                <button type="submit" class="btn btn-default">Submit</button>
+                                <button type="submit" class="btn btn-success">Submit</button>
                                 <button type="reset" class="btn btn-default">Reset</button>
                             <!-- form-->
                             </form>
