--- a/views/history.handlebars
+++ b/views/history.handlebars
@@ -118,8 +118,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <h1 class="page-header">
-                            Your Task History <small>View By Date</small>
-                            <input class="btn btn-default" type="button"  onClick="parent.location='/task' "value="New Task" style="float: right;">
+                                History <small>View By Date</small>
                         </h1>
 
                     </div>
