--- a/views/analysis.handlebars
+++ b/views/analysis.handlebars
@@ -89,11 +89,11 @@
                                 <a href="/task"><i class="fa fa-fw fa-bar-chart-o"></i> Add a new task</a>
                             </li>
                             <li>
+                                <a href="/history"><i class="fa fa-fw fa-dashboard"></i> Your Task History</a>
+                            </li>  
+                            <li>
                                 <a href="/exercises"><i class="fa fa-fw fa-table"></i> Reflection</a>
-                            </li>
-                       <!--     <li class="active">
-                                <a href="/analysis"><i class="fa fa-fw fa-edit"></i> Analysis</a>
-                            </li>    -->
+                            </li>                            
                             <li>
                                 <a href="/about"><i class="fa fa-fw fa-desktop"></i> About</a>
                             </li>
@@ -126,7 +126,7 @@
                         <br>
                         <strong>{{feelingMsg}}</strong> {{feelingMsg2}}
                         <br>
- <!-- put back                       <img class="img-thumbnail" src="{{img}}" alt="analysis">    -->
+                        <img class="img-thumbnail" src="{{img}}" alt="analysis">    
                         <br>
                     </div>
 
