--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -16,6 +16,7 @@
 
     <!-- Custom CSS -->
     <link href="css/sb-admin.css" rel="stylesheet">
+    <link href="css/sb-admin.css" rel="stylesheet">
 
     <!-- Morris Charts CSS -->
     <link href="css/plugins/morris.css" rel="stylesheet">
@@ -139,10 +140,8 @@
                             <div class="panel-heading">
 
                                 <div class="row">
-                                    <div class="col-xs-6">
-                                        <i class="fa fa-tasks fa-3x"></i>
-                                    </div>
-                                    <div class="col-xs-6" id="{{name}}">
+
+                                    <div class="col-xs-9" id="{{name}}">
                                 
                                         <h4> 
                                             {{name}}
