--- a/views/history.handlebars
+++ b/views/history.handlebars
@@ -86,11 +86,11 @@
                             <li>
                                 <a href="/task"><i class="fa fa-fw fa-bar-chart-o"></i> Add a new task</a>
                             </li>
-                            <li class="active">
+                            <li>
                                 <a href="/history"><i class="fa fa-fw fa-dashboard"></i> Your Task History</a>
                             </li>
                             <li>
-                                <a href="/exercises"><i class="fa fa-fw fa-table"></i> How Is Your Mood?</a>
+                                <a href="/exercises"><i class="fa fa-fw fa-table"></i> Reflection</a>
                             </li>
                  <!--           <li>
                                 <a href="/analysis"><i class="fa fa-fw fa-edit"></i> Analysis</a>
