--- a/views/task.handlebars
+++ b/views/task.handlebars
@@ -88,11 +88,11 @@
                                 <a href="/task"><i class="fa fa-fw fa-bar-chart-o"></i> Add a new task</a>
                             </li>
                             <li>
-                                <a href="/exercises"><i class="fa fa-fw fa-table"></i> Reflection </a>
+                                <a href="/history"><i class="fa fa-fw fa-dashboard"></i> Your Task History</a>
+                            </li>  
+                            <li>
+                                <a href="/exercises"><i class="fa fa-fw fa-table"></i> Reflection</a>
                             </li>
-                    <!--        <li>
-                                <a href="/analysis"><i class="fa fa-fw fa-edit"></i> Analysis</a>
-                            </li>       -->
                             <li>
                                 <a href="/about"><i class="fa fa-fw fa-desktop"></i> About</a>
                             </li>
